<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_sort"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_sort_priority_high"
                android:title="@string/priority_high"/>
            <item
                android:id="@+id/action_sort_priority_medium"
                android:title="@string/priority_medium"/>
            <item
                android:id="@+id/action_sort_priority_low"
                android:title="@string/priority_low"/>
            <item
                android:id="@+id/action_sort_reset"
                android:title="@string/reset"/>
        </menu>
    </item>
</menu>
